fixed alignment issues

--- a/DMT_EvalGrid_Style.css
+++ b/DMT_EvalGrid_Style.css
@@ -67,6 +67,11 @@ textarea {
   
   display: grid;
   grid-template-columns: auto 60px auto;
+  text-align: right;
+}
+
+.weight input {
+  text-align: right;
 }
 
 /* --- Factors and Subfactors --- */
